[package]
name = "thanatos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.7"
winapi = { version = "0.3", features = ["winuser"] }
druid = "0.8"
stdweb = "0.4.20"
lazy_static = "1.4"
crossterm = "0.27.0"
inputbot = "0.6.0"
keyboard = "0.0.0"
winit = "0.28.6"
keybind = "0.1"

[build-dependencies]
winres = "0.1"